Desarrollado por FB

--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center">
-                <p class="text-gray-300">&copy; 2024 TromposChile. Todos los derechos reservados. Desarrollado con ❤️ para la industria metalúrgica.</p>
+                <p class="text-gray-300">&copy; 2025 TromposChile. Todos los derechos reservados.</p>
+                <p class="text-gray-300">Desarrollado por <a href="https://franciscobarrientos.cl/" target="_blank">Francisco Barrientos</a></p>
             </div>
         </div>
     </footer>
