--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="flex items-center justify-between">
                 <!-- Logo -->
                 <div class="flex items-center cursor-pointer" onclick="scrollToTop()">
-                    <img src="https://via.placeholder.com/60x60/3B82F6/FFFFFF?text=TC" alt="TromposChile Logo" class="h-12 w-12 rounded-lg">
+                    <div class="h-12 w-12 rounded-lg bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-bold text-xl">TC</div>
                     <span class="ml-3 text-xl font-bold text-gray-800 dark:text-white">TromposChile</span>
                 </div>
 
@@ -141,7 +141,13 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800 dark:text-white">Nosotros</h2>
                 <div class="grid md:grid-cols-2 gap-12 items-center">
                     <div>
-                        <img src="https://via.placeholder.com/500x500/3B82F6/FFFFFF?text=TromposChile" alt="TromposChile Logo" class="w-full max-w-md mx-auto rounded-lg shadow-lg">
+                        <div class="w-full max-w-md mx-auto bg-gradient-to-br from-blue-500 to-purple-600 rounded-lg shadow-lg p-8 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <div class="text-8xl font-bold mb-4">TC</div>
+                                <div class="text-2xl font-semibold">TromposChile</div>
+                                <div class="text-lg opacity-90 mt-2">Metalúrgica</div>
+                            </div>
+                        </div>
                     </div>
                     <div>
                         <h3 class="text-2xl font-semibold mb-6 text-gray-800 dark:text-white">Más de 10 años de experiencia</h3>
@@ -192,7 +198,12 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800 dark:text-white">Productos Destacados</h2>
                 <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                        <img src="https://via.placeholder.com/300x200/3B82F6/FFFFFF?text=Trompo+Industrial" alt="Trompo Industrial" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-blue-500 to-blue-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-cog text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Trompo Industrial</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Trompo Industrial Pro</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-3">Trompo de alta resistencia para uso industrial intensivo.</p>
@@ -200,7 +211,12 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                        <img src="https://via.placeholder.com/300x200/10B981/FFFFFF?text=Betonera+Max" alt="Betonera Max" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-green-500 to-green-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-industry text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Betonera Max</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Betonera Max 350L</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-3">Betonera de 350 litros con motor de alta potencia.</p>
@@ -208,7 +224,12 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                        <img src="https://via.placeholder.com/300x200/8B5CF6/FFFFFF?text=Placa+Steel" alt="Placa Steel" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-purple-500 to-purple-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-layer-group text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Placa Steel</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Placa Steel Premium</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-3">Placa de acero reforzado para construcción pesada.</p>
@@ -216,7 +237,12 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow">
-                        <img src="https://via.placeholder.com/300x200/F59E0B/FFFFFF?text=Kit+Herramientas" alt="Kit Herramientas" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-yellow-500 to-orange-500 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-tools text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Kit Herramientas</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Kit Herramientas Completo</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-3">Set completo de herramientas para metalúrgica.</p>
@@ -254,7 +280,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800 dark:text-white">Testimonios</h2>
                 <div class="grid md:grid-cols-3 gap-8">
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6 text-center shadow-lg">
-                        <img src="https://via.placeholder.com/100x100/3B82F6/FFFFFF?text=JC" alt="Juan Carlos" class="w-20 h-20 rounded-full mx-auto mb-4 object-cover">
+                        <div class="w-20 h-20 rounded-full mx-auto mb-4 bg-gradient-to-br from-blue-500 to-blue-600 flex items-center justify-center text-white text-2xl font-bold">JC</div>
                         <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Juan Carlos Pérez</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-3">Constructor</p>
                         <p class="text-gray-600 dark:text-gray-300 italic">"Excelente calidad en todos sus productos. Llevo 5 años comprando aquí y siempre me sorprenden con su servicio. ¡Muy recomendados!"</p>
@@ -267,7 +293,7 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6 text-center shadow-lg">
-                        <img src="https://via.placeholder.com/100x100/10B981/FFFFFF?text=MR" alt="María Rodriguez" class="w-20 h-20 rounded-full mx-auto mb-4 object-cover">
+                        <div class="w-20 h-20 rounded-full mx-auto mb-4 bg-gradient-to-br from-green-500 to-green-600 flex items-center justify-center text-white text-2xl font-bold">MR</div>
                         <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">María Rodríguez</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-3">Ingeniera Civil</p>
                         <p class="text-gray-600 dark:text-gray-300 italic">"Los equipos que compré han funcionado perfectamente en nuestras obras. La atención al cliente es excepcional. ¡Gracias por todo!"</p>
@@ -280,7 +306,7 @@
                         </div>
                     </div>
                     <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6 text-center shadow-lg">
-                        <img src="https://via.placeholder.com/100x100/8B5CF6/FFFFFF?text=AS" alt="Andrés Silva" class="w-20 h-20 rounded-full mx-auto mb-4 object-cover">
+                        <div class="w-20 h-20 rounded-full mx-auto mb-4 bg-gradient-to-br from-purple-500 to-purple-600 flex items-center justify-center text-white text-2xl font-bold">AS</div>
                         <h3 class="text-lg font-semibold mb-2 text-gray-800 dark:text-white">Andrés Silva</h3>
                         <p class="text-gray-600 dark:text-gray-300 mb-3">Contratista</p>
                         <p class="text-gray-600 dark:text-gray-300 italic">"Productos de primera calidad y entrega rápida. El equipo de TromposChile siempre está dispuesto a ayudar. ¡Los recomiendo al 100%!"</p>
@@ -302,7 +328,12 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800 dark:text-white">Blog</h2>
                 <div class="grid md:grid-cols-3 gap-8">
                     <article class="bg-white dark:bg-gray-700 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow cursor-pointer" onclick="openBlogModal('blog1')">
-                        <img src="https://via.placeholder.com/400x250/3B82F6/FFFFFF?text=Metalurgia+Industrial" alt="Metalurgia Industrial" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-blue-500 to-blue-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-industry text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Metalurgia Industrial</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white">Innovaciones en Metalurgia Industrial</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-4">Descubre las últimas tendencias y tecnologías en el sector metalúrgico que están revolucionando la industria.</p>
@@ -310,7 +341,12 @@
                         </div>
                     </article>
                     <article class="bg-white dark:bg-gray-700 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow cursor-pointer" onclick="openBlogModal('blog2')">
-                        <img src="https://via.placeholder.com/400x250/10B981/FFFFFF?text=Mantenimiento+Equipos" alt="Mantenimiento de Equipos" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-green-500 to-green-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-tools text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Mantenimiento Equipos</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white">Guía de Mantenimiento de Equipos</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-4">Consejos esenciales para mantener tus equipos de metalurgia en óptimas condiciones y extender su vida útil.</p>
@@ -318,7 +354,12 @@
                         </div>
                     </article>
                     <article class="bg-white dark:bg-gray-700 rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow cursor-pointer" onclick="openBlogModal('blog3')">
-                        <img src="https://via.placeholder.com/400x250/8B5CF6/FFFFFF?text=Seguridad+Industrial" alt="Seguridad Industrial" class="w-full h-48 object-cover">
+                        <div class="h-48 bg-gradient-to-br from-purple-500 to-purple-600 flex items-center justify-center">
+                            <div class="text-center text-white">
+                                <i class="fas fa-hard-hat text-6xl mb-2"></i>
+                                <div class="text-sm font-semibold">Seguridad Industrial</div>
+                            </div>
+                        </div>
                         <div class="p-6">
                             <h3 class="text-xl font-semibold mb-3 text-gray-800 dark:text-white">Seguridad en el Trabajo Industrial</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-4">Protocolos y mejores prácticas de seguridad para trabajar con equipos de metalurgia de manera segura.</p>
@@ -399,11 +440,11 @@
                                     <p class="text-gray-600 dark:text-gray-300">+569 4105 8461</p>
                                 </div>
                             </a>
-                            <a href="/cdn-cgi/l/email-protection#98cceaf7f5e8f7ebdbf0f1f4fdd8fff5f9f1f4b6fbf7f5" class="flex items-center p-4 bg-white dark:bg-gray-700 rounded-lg shadow hover:shadow-lg transition-shadow">
+                            <a href="mailto:TromposChile@gmail.com" class="flex items-center p-4 bg-white dark:bg-gray-700 rounded-lg shadow hover:shadow-lg transition-shadow">
                                 <i class="fas fa-envelope text-2xl text-green-500 mr-4"></i>
                                 <div>
                                     <p class="font-semibold text-gray-800 dark:text-white">Email</p>
-                                    <p class="text-gray-600 dark:text-gray-300"><span class="__cf_email__" data-cfemail="4d193f22203d223e0e252421280d2a202c2421632e2220">[email&#160;protected]</span></p>
+                                    <p class="text-gray-600 dark:text-gray-300">TromposChile@gmail.com</p>
                                 </div>
                             </a>
                             <a href="https://wa.me/56941058461" target="_blank" class="flex items-center p-4 bg-white dark:bg-gray-700 rounded-lg shadow hover:shadow-lg transition-shadow">
@@ -500,7 +541,7 @@
                     </p>
                     <p class="text-gray-300">
                         <i class="fas fa-envelope mr-2"></i>
-                        <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="6531170a08150a16260d0c0900250208040c094b060a08">[email&#160;protected]</a>
+                        <a href="mailto:TromposChile@gmail.com">TromposChile@gmail.com</a>
                     </p>
                 </div>
             </div>
@@ -659,8 +700,6 @@
         </div>
     </div>
 
-    <!-- Scripts -->
     <script src="js/index.js"></script>
-    <!--<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>-->
 </body>
 </html>
