--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12 text-gray-800 dark:text-white">Tienda</h2>
                 
                 <!-- Filter Buttons -->
-                <div class="flex flex-wrap justify-center gap-4 mb-8">
+                <div class="flex flex-wrap justify-center gap-4 mb-8 dark:text-white">
                     <button class="filter-btn active" data-filter="all">Todos</button>
                     <button class="filter-btn" data-filter="trompos">Trompos</button>
                     <button class="filter-btn" data-filter="betoneras">Betoneras</button>
