--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- TailwindCSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="stylesheet" href="css/font-awesome_6.5.1_all.min.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/index.css" />
 
